fix css whitespace value

--- a/src/features/amUI/common/AccessPackageList/PackageIsPartiallyDeletableAlert/PackageIsPartiallyDeletableAlert.module.css
+++ b/src/features/amUI/common/AccessPackageList/PackageIsPartiallyDeletableAlert/PackageIsPartiallyDeletableAlert.module.css
@@ -1,5 +1,5 @@
 .modalContent {
-  white-space: wrap;
+  white-space: normal;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
